--- a/public/stylesheets/sass/_seller_signup.scss
+++ b/public/stylesheets/sass/_seller_signup.scss
@@ -66,16 +66,18 @@ form input[type="text"] {
 form label {
     display : none;
 }
-form div#email.field,
-form input#seller_listing_user_email,
-form div#number.field,
-form input#seller_listing_phone_number_number,
-form div#address1.field,
-form input#seller_listing_address_address1,
-form div#address_zip.field,
-form input#seller_listing_address_zip {
-     width : 157px;
+form div#email.field, form input#seller_listing_user_email,
+form div#number.field, form input#seller_listing_phone_number_number,
+form div#address1.field, form input#seller_listing_address_address1 {
+/*     width : 157px;*/
+    width : 208px;
 }
+form div#address_zip.field, form input#seller_listing_address_zip { width : 151px; }
+
+form div#city.field, form input#seller_listing_address_city { width : 151px; float : left; margin-right : 20px; }
+form div#state.field, form input#seller_listing_address_state { width : 35px; float : left; }
+
+
 #securityC span { display : none; }
 #security_iconsC {
     float      : left; /* to take it out of the flow */
