--- a/public/stylesheets/sass/guides.scss
+++ b/public/stylesheets/sass/guides.scss
@@ -1,6 +1,8 @@
 @import "jquery.slider";
 @import "pagination";
 @import "seller_signup";
+@import "form_validations";
+
 
 /*
 #menuC { margin-bottom : 7px; }
