--- a/public/stylesheets/reasons.css
+++ b/public/stylesheets/reasons.css
@@ -1,1 +1,401 @@
-#menuC{margin-bottom:6px}#mainC div#tab_arrow{display:block;left:620px;top:0px}#mainC img#top{background:url(/images/page_banners/reasons_to_sell.png) no-repeat scroll 0px 0px transparent;height:100px}hr#top_of_content.space{margin-top:-6px}.slider{width:630px;position:relative;border:1px solid #e8edca;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}.slider_bg{background:url(/images/sprites/slider.png) repeat-x scroll 0px 0px transparent;width:621px;height:55px;position:absolute;top:130px;left:5px}.scroll{overflow:hidden;width:600px;height:185px;margin:0 auto;position:relative}.scrollContainer{position:relative}.scrollContainer div.panel{padding:16px 9px 0px 10px;width:169px;height:200px}.inside{position:absolute;bottom:0}.inside img{display:block;width:169px}.slider h2{font-size:1em;color:#888;padding:14px 0 10px 0;text-align:center;letter-spacing:.2px;word-spacing:.2px}.slider h2 a{font-weight:bold;color:#888}.inside p{font-size:11px;color:#ccc}.scroll_actionsC{height:20px;width:600px;margin:0 auto;margin-bottom:15px;position:relative;overflow:hidden}.scroll_actionsC .scroll_left{background:url(/images/sprites/slider.png) no-repeat scroll 0px -56px transparent;height:20px;width:28px;position:absolute;top:0;left:0}.scroll_actionsC .scrollbarC{background:url(/images/sprites/slider.png) no-repeat scroll -34px -56px transparent;width:553px;height:20px;position:absolute;top:0;left:28px}.scrollbarC .scrollbar{width:150px;height:8px;background:#d5e6a9;position:absolute;top:6px;left:6px}.scroll_actionsC .scroll_right{background:url(/images/sprites/slider.png) no-repeat scroll -590px -56px transparent;height:20px;width:29px;position:absolute;top:0;right:0}#send_image_btn{background:url(/images/sprites/reasons_to_sell.png) no-repeat scroll 0px 0px transparent;height:34px;width:128px}form.email_image_form .field,form.email_image_form input[type="text"]{width:255px}form.email_image_form .submitC{padding:0}#r_envelope_icon{background:url(/images/sprites/reasons_to_sell.png) no-repeat scroll -261px 0px transparent;height:14px;width:15px}#r_twitter_icon{background:url(/images/sprites/reasons_to_sell.png) no-repeat scroll -261px -16px transparent;height:14px;width:15px}#r_facebook_icon{background:url(/images/sprites/reasons_to_sell.png) no-repeat scroll -279px 0px transparent;height:14px;width:14px}.share_article_onC{text-align:right;margin:12px 27px 0 0;line-height:21px;color:#555}.share_article_onC strong{font-size:.85em;font-weight:bold}.share_article_onC .shareC{line-height:10px;background-color:#F0F3DA;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px;padding:4px 8px;width:64px;float:right;margin-left:10px}.shareC img{margin:0 2px}textarea.copy_image_code{width:255px;height:2.5em;font-size:.8em;margin-bottom:3px;overflow:hidden}div.pagination{text-align:center;line-height:34px}div.pagination em,div.pagination a{padding:0 4px;margin:0 5px}div.pagination a{color:#888}div.pagination a:hover{color:#000;text-decoration:none !important}div.pagination em{background-color:#87a84a;color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}div.pagination a.previous_page,div.pagination a.previous_page:hover,div.pagination span.previous_page.disabled,div.pagination a.next_page,div.pagination a.next_page:hover,div.pagination span.next_page.disabled{background:url(/images/sprites/pagination.png) no-repeat scroll 0px 0px transparent;width:77px;height:34px;display:inline-block;margin:0 10px;padding:0}div.pagination a.previous_page:hover{background-position:0px    0px}div.pagination a.previous_page{background-position:0px -35px}div.pagination span.previous_page.disabled{background-position:0px -70px}div.pagination a.next_page:hover{background-position:-78px 0px}div.pagination a.next_page{background-position:-78px -35px}div.pagination span.next_page.disabled{background-position:-78px -70px}.sprite{background:url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px 500px transparent}#lock_icon{background-position:-359px -56px;height:25px;width:85px;vertical-align:text-top;margin-left:5px}#truste{background-position:0px -125px;height:28px;width:101px;margin:0 0 0 20px}#mcafee{background-position:-360px -32px;height:22px;width:62px;margin:0 0 0 4px}form input[type="image"]{background-position:0px -81px;height:40px;width:119px}.seller_signup_boxC{margin-bottom:50px}.seller_signup_boxC div.gutter{padding:15px 22px 5px}.seller_signup_boxC p,.seller_signup_boxC strong{font-size:.75em;line-height:16px;margin-bottom:8px;margin-right:-25px}.seller_signup_boxC strong{display:block;font-weight:bold;margin-bottom:4px}form .field,form input[type="text"]{width:208px}form label{display:none}form div#email.field,form input#seller_listing_user_email,form div#number.field,form input#seller_listing_phone_number_number,form div#address1.field,form input#seller_listing_address_address1,form div#address_zip.field,form input#seller_listing_address_zip{width:157px}#securityC span{display:none}#security_iconsC{float:left;margin-top:17px}.submitC{padding-top:12px}.submitC #securityC{display:inline-block;font-size:.9em;color:#666;position:relative;top:-22px;left:5px}#show_pageC h1.green{margin:10px 0px 20px 0px}#show_pageC hr.massive{margin:3em 0;height:1px}#show_pageC div.article_gutter{width:90%;margin:1.4em auto}#show_pageC div.footnote{font-size:.7em;margin-bottom:3px}.other_resourcesC{color:#7A7A7A}.other_resourcesC h3{font-weight:bold;margin-bottom:9px}.other_resourcesC .other_resourceC{text-align:center}.other_resourceC p,.other_resourceC div{text-align:left;margin:0 6px;font-size:.85em}.other_resourceC a.title{color:#7A7A7A}.other_resourceC a.title:hover{color:#333333;text-decoration:none}
+#menuC {
+  margin-bottom: 6px; }
+
+#mainC div#tab_arrow {
+  display: block;
+  left: 620px;
+  top: 0px; }
+
+#mainC img#top {
+  background: url(/images/page_banners/reasons_to_sell.png) no-repeat scroll 0px 0px transparent;
+  height: 100px; }
+
+hr#top_of_content.space {
+  margin-top: -6px; }
+
+.slider {
+  width: 630px;
+  position: relative;
+  border: 1px solid #e8edca;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px; }
+
+.slider_bg {
+  background: url(/images/sprites/slider.png) repeat-x scroll 0px 0px transparent;
+  width: 621px;
+  height: 55px;
+  position: absolute;
+  top: 130px;
+  left: 5px; }
+
+.scroll {
+  overflow: hidden;
+  width: 600px;
+  height: 185px;
+  margin: 0 auto;
+  position: relative; }
+
+.scrollContainer {
+  position: relative; }
+
+.scrollContainer div.panel {
+  padding: 16px 9px 0px 10px;
+  width: 169px;
+  height: 200px; }
+
+.inside {
+  position: absolute;
+  bottom: 0; }
+
+.inside img {
+  display: block;
+  width: 169px; }
+
+.slider h2 {
+  font-size: 1em;
+  color: #888;
+  padding: 14px 0 10px 0;
+  text-align: center;
+  letter-spacing: .2px;
+  word-spacing: .2px; }
+
+.slider h2 a {
+  font-weight: bold;
+  color: #888; }
+
+.inside p {
+  font-size: 11px;
+  color: #ccc; }
+
+.scroll_actionsC {
+  height: 20px;
+  width: 600px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  position: relative;
+  overflow: hidden; }
+
+.scroll_actionsC .scroll_left {
+  background: url(/images/sprites/slider.png) no-repeat scroll 0px -56px transparent;
+  height: 20px;
+  width: 28px;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+.scroll_actionsC .scrollbarC {
+  background: url(/images/sprites/slider.png) no-repeat scroll -34px -56px transparent;
+  width: 553px;
+  height: 20px;
+  position: absolute;
+  top: 0;
+  left: 28px; }
+
+.scrollbarC .scrollbar {
+  width: 150px;
+  height: 8px;
+  background: #d5e6a9;
+  position: absolute;
+  top: 6px;
+  left: 6px; }
+
+.scroll_actionsC .scroll_right {
+  background: url(/images/sprites/slider.png) no-repeat scroll -590px -56px transparent;
+  height: 20px;
+  width: 29px;
+  position: absolute;
+  top: 0;
+  right: 0; }
+
+#send_image_btn {
+  background: url(/images/sprites/reasons_to_sell.png) no-repeat scroll 0px 0px transparent;
+  height: 34px;
+  width: 128px; }
+
+form.email_image_form .field,
+form.email_image_form input[type="text"] {
+  width: 255px; }
+
+form.email_image_form .submitC {
+  padding: 0; }
+
+#r_envelope_icon {
+  background: url(/images/sprites/reasons_to_sell.png) no-repeat scroll -261px 0px transparent;
+  height: 14px;
+  width: 15px; }
+
+#r_twitter_icon {
+  background: url(/images/sprites/reasons_to_sell.png) no-repeat scroll -261px -16px transparent;
+  height: 14px;
+  width: 15px; }
+
+#r_facebook_icon {
+  background: url(/images/sprites/reasons_to_sell.png) no-repeat scroll -279px 0px transparent;
+  height: 14px;
+  width: 14px; }
+
+.share_article_onC {
+  text-align: right;
+  margin: 12px 27px 0 0;
+  line-height: 21px;
+  color: #555; }
+
+.share_article_onC strong {
+  font-size: .85em;
+  font-weight: bold; }
+
+.share_article_onC .shareC {
+  line-height: 10px;
+  background-color: #F0F3DA;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  padding: 4px 8px;
+  width: 64px;
+  float: right;
+  margin-left: 10px; }
+
+.shareC img {
+  margin: 0 2px; }
+
+textarea.copy_image_code {
+  width: 255px;
+  height: 2.5em;
+  font-size: .8em;
+  margin-bottom: 3px;
+  overflow: hidden; }
+
+div.pagination {
+  text-align: center;
+  line-height: 34px; }
+
+div.pagination em,
+div.pagination a {
+  padding: 0 4px;
+  margin: 0 5px; }
+
+div.pagination a {
+  color: #888; }
+
+div.pagination a:hover {
+  color: #000;
+  text-decoration: none !important; }
+
+div.pagination em {
+  background-color: #87a84a;
+  color: #fff;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px; }
+
+div.pagination a.previous_page,
+div.pagination a.previous_page:hover,
+div.pagination span.previous_page.disabled,
+div.pagination a.next_page,
+div.pagination a.next_page:hover,
+div.pagination span.next_page.disabled {
+  background: url(/images/sprites/pagination.png) no-repeat scroll 0px 0px transparent;
+  width: 77px;
+  height: 34px;
+  display: inline-block;
+  margin: 0 10px;
+  padding: 0; }
+
+div.pagination a.previous_page:hover {
+  background-position: 0px    0px; }
+
+div.pagination a.previous_page {
+  background-position: 0px -35px; }
+
+div.pagination span.previous_page.disabled {
+  background-position: 0px -70px; }
+
+div.pagination a.next_page:hover {
+  background-position: -78px 0px; }
+
+div.pagination a.next_page {
+  background-position: -78px -35px; }
+
+div.pagination span.next_page.disabled {
+  background-position: -78px -70px; }
+
+/* Start Sprites */
+.sprite {
+  background: url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px 500px transparent; }
+
+#lock_icon {
+  background-position: -359px -56px;
+  height: 25px;
+  width: 85px;
+  vertical-align: text-top;
+  margin-left: 5px; }
+
+#truste {
+  background-position: 0px -125px;
+  height: 28px;
+  width: 101px;
+  margin: 0 0 0 20px; }
+
+/*#verisign {
+    background-position : -103px -125px;
+    height : 26px;
+    width : 61px;
+    margin : 0 0 0 7px;
+}*/
+#mcafee {
+  background-position: -360px -32px;
+  height: 22px;
+  width: 62px;
+  margin: 0 0 0 4px; }
+
+form input[type="image"] {
+  background-position: 0px -81px;
+  height: 40px;
+  width: 119px; }
+
+/* end sprites */
+.seller_signup_boxC {
+  /*width : 260px; rm'd so right col widgets have a consistent width */
+  margin-bottom: 50px;
+  /* to account for how we placed the #security_iconsC (see below) */ }
+
+.seller_signup_boxC div.gutter {
+  padding: 15px 22px 5px; }
+
+/*.seller_signup_boxC h2 {
+    letter-spacing : -.75px;
+    color : #f89a36;
+    font-size : 1.4em;
+    font-weight : bold;
+    margin-bottom : 5px;
+}
+*/
+.seller_signup_boxC p,
+.seller_signup_boxC strong {
+  font-size: .75em;
+  line-height: 16px;
+  margin-bottom: 8px;
+  margin-right: -25px; }
+
+.seller_signup_boxC strong {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 4px; }
+
+form .field,
+form input[type="text"] {
+  width: 208px; }
+
+form label {
+  display: none; }
+
+form div#email.field, form input#seller_listing_user_email,
+form div#number.field, form input#seller_listing_phone_number_number,
+form div#address1.field, form input#seller_listing_address_address1 {
+  /*     width : 157px;*/
+  width: 208px; }
+
+form div#address_zip.field, form input#seller_listing_address_zip {
+  width: 151px; }
+
+form div#city.field, form input#seller_listing_address_city {
+  width: 151px;
+  float: left;
+  margin-right: 20px; }
+
+form div#state.field, form input#seller_listing_address_state {
+  width: 35px;
+  float: left; }
+
+#securityC span {
+  display: none; }
+
+#security_iconsC {
+  float: left;
+  /* to take it out of the flow */
+  margin-top: 17px;
+  /* to place it below the form box */ }
+
+.submitC {
+  padding-top: 12px; }
+
+.submitC #securityC {
+  display: inline-block;
+  font-size: .9em;
+  color: #666;
+  position: relative;
+  top: -22px;
+  left: 5px; }
+
+input.valid, textarea.valid {
+  background-color: #daefc0;
+  border-color: #588238;
+  position: relative;
+  color: #588238 !important; }
+
+input.invalid, textarea.invalid {
+  background-color: #f6b5b1;
+  border-color: #bc2b25;
+  position: relative;
+  color: #a00 !important; }
+
+div.form_validation_icon {
+  background: url(/images/sprites/application.png) repeat-x scroll -513px -305px transparent;
+  position: absolute;
+  right: -17px;
+  /* 15px wide with 8px padding (4right, 4left) + border and this about centers it. ugh */
+  top: 20%;
+  height: 15px;
+  width: 15px;
+  z-index: 9; }
+
+div.form_validation_icon.valid {
+  background-position: -376px -323px; }
+
+div.form_validation_icon.invalid {
+  background-position: -359px -323px; }
+
+/* FIXME -- jquery.ketchup should not even be creating their container! */
+.ketchup-error-container {
+  display: none; }
+
+/* show page specific */
+/* Blog Show Pages */
+#show_pageC h1.green {
+  margin: 10px 0px 20px 0px; }
+
+#show_pageC hr.massive {
+  margin: 3em 0;
+  height: 1px; }
+
+#show_pageC div.article_gutter {
+  width: 90%;
+  margin: 1.4em auto; }
+
+#show_pageC div.footnote {
+  font-size: .7em;
+  margin-bottom: 3px; }
+
+.other_resourcesC {
+  color: #7A7A7A; }
+
+.other_resourcesC h3 {
+  font-weight: bold;
+  margin-bottom: 9px; }
+
+.other_resourcesC .other_resourceC {
+  text-align: center; }
+
+.other_resourceC p,
+.other_resourceC div {
+  text-align: left;
+  margin: 0 6px;
+  font-size: .85em; }
+
+.other_resourceC a.title {
+  color: #7A7A7A; }
+
+.other_resourceC a.title:hover {
+  color: #333333;
+  text-decoration: none; }
