--- a/public/stylesheets/sass/trends.scss
+++ b/public/stylesheets/sass/trends.scss
@@ -17,6 +17,8 @@ hr#top_of_content.space { margin-top : -15px; }
 @import "share_this_image";
 @import "pagination";
 @import "seller_signup";
+@import "form_validations";
+
 
 /* show page specific */
 @import "blog_show_page";
