--- a/public/stylesheets/guides.css
+++ b/public/stylesheets/guides.css
@@ -1,386 +1,1 @@
-.slider {
-  width: 630px;
-  position: relative;
-  border: 1px solid #e8edca;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px; }
-
-.slider_bg {
-  background: url(/images/sprites/slider.png) repeat-x scroll 0px 0px transparent;
-  width: 621px;
-  height: 55px;
-  position: absolute;
-  top: 130px;
-  left: 5px; }
-
-.scroll {
-  overflow: hidden;
-  width: 600px;
-  height: 185px;
-  margin: 0 auto;
-  position: relative; }
-
-.scrollContainer {
-  position: relative; }
-
-.scrollContainer div.panel {
-  padding: 16px 9px 0px 10px;
-  width: 169px;
-  height: 200px; }
-
-.inside {
-  position: absolute;
-  bottom: 0; }
-
-.inside img {
-  display: block;
-  width: 169px; }
-
-.slider h2 {
-  font-size: 1em;
-  color: #888;
-  padding: 14px 0 10px 0;
-  text-align: center;
-  letter-spacing: .2px;
-  word-spacing: .2px; }
-
-.slider h2 a {
-  font-weight: bold;
-  color: #888; }
-
-.inside p {
-  font-size: 11px;
-  color: #ccc; }
-
-.scroll_actionsC {
-  height: 20px;
-  width: 600px;
-  margin: 0 auto;
-  margin-bottom: 15px;
-  position: relative;
-  overflow: hidden; }
-
-.scroll_actionsC .scroll_left {
-  background: url(/images/sprites/slider.png) no-repeat scroll 0px -56px transparent;
-  height: 20px;
-  width: 28px;
-  position: absolute;
-  top: 0;
-  left: 0; }
-
-.scroll_actionsC .scrollbarC {
-  background: url(/images/sprites/slider.png) no-repeat scroll -34px -56px transparent;
-  width: 553px;
-  height: 20px;
-  position: absolute;
-  top: 0;
-  left: 28px; }
-
-.scrollbarC .scrollbar {
-  width: 150px;
-  height: 8px;
-  background: #d5e6a9;
-  position: absolute;
-  top: 6px;
-  left: 6px; }
-
-.scroll_actionsC .scroll_right {
-  background: url(/images/sprites/slider.png) no-repeat scroll -590px -56px transparent;
-  height: 20px;
-  width: 29px;
-  position: absolute;
-  top: 0;
-  right: 0; }
-
-div.pagination {
-  text-align: center;
-  line-height: 34px; }
-
-div.pagination em,
-div.pagination a {
-  padding: 0 4px;
-  margin: 0 5px; }
-
-div.pagination a {
-  color: #888; }
-
-div.pagination a:hover {
-  color: #000;
-  text-decoration: none !important; }
-
-div.pagination em {
-  background-color: #87a84a;
-  color: #fff;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px; }
-
-div.pagination a.previous_page,
-div.pagination a.previous_page:hover,
-div.pagination span.previous_page.disabled,
-div.pagination a.next_page,
-div.pagination a.next_page:hover,
-div.pagination span.next_page.disabled {
-  background: url(/images/sprites/pagination.png) no-repeat scroll 0px 0px transparent;
-  width: 77px;
-  height: 34px;
-  display: inline-block;
-  margin: 0 10px;
-  padding: 0; }
-
-div.pagination a.previous_page:hover {
-  background-position: 0px    0px; }
-
-div.pagination a.previous_page {
-  background-position: 0px -35px; }
-
-div.pagination span.previous_page.disabled {
-  background-position: 0px -70px; }
-
-div.pagination a.next_page:hover {
-  background-position: -78px 0px; }
-
-div.pagination a.next_page {
-  background-position: -78px -35px; }
-
-div.pagination span.next_page.disabled {
-  background-position: -78px -70px; }
-
-/* Start Sprites */
-.sprite {
-  background: url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px 500px transparent; }
-
-#lock_icon {
-  background-position: -359px -56px;
-  height: 25px;
-  width: 85px;
-  vertical-align: text-top;
-  margin-left: 5px; }
-
-#truste {
-  background-position: 0px -125px;
-  height: 28px;
-  width: 101px;
-  margin: 0 0 0 20px; }
-
-/*#verisign {
-    background-position : -103px -125px;
-    height : 26px;
-    width : 61px;
-    margin : 0 0 0 7px;
-}*/
-#mcafee {
-  background-position: -360px -32px;
-  height: 22px;
-  width: 62px;
-  margin: 0 0 0 4px; }
-
-form input[type="image"] {
-  background-position: 0px -81px;
-  height: 40px;
-  width: 119px; }
-
-/* end sprites */
-.seller_signup_boxC {
-  /*width : 260px; rm'd so right col widgets have a consistent width */
-  margin-bottom: 50px;
-  /* to account for how we placed the #security_iconsC (see below) */ }
-
-.seller_signup_boxC div.gutter {
-  padding: 15px 22px 5px; }
-
-/*.seller_signup_boxC h2 {
-    letter-spacing : -.75px;
-    color : #f89a36;
-    font-size : 1.4em;
-    font-weight : bold;
-    margin-bottom : 5px;
-}
-*/
-.seller_signup_boxC p,
-.seller_signup_boxC strong {
-  font-size: .75em;
-  line-height: 16px;
-  margin-bottom: 8px;
-  margin-right: -25px; }
-
-.seller_signup_boxC strong {
-  display: block;
-  font-weight: bold;
-  margin-bottom: 4px; }
-
-form .field,
-form input[type="text"] {
-  width: 208px; }
-
-form label {
-  display: none; }
-
-form div#email.field, form input#seller_listing_user_email,
-form div#number.field, form input#seller_listing_phone_number_number,
-form div#address1.field, form input#seller_listing_address_address1 {
-  /*     width : 157px;*/
-  width: 208px; }
-
-form div#address_zip.field, form input#seller_listing_address_zip {
-  width: 151px; }
-
-form div#city.field, form input#seller_listing_address_city {
-  width: 151px;
-  float: left;
-  margin-right: 20px; }
-
-form div#state.field, form input#seller_listing_address_state {
-  width: 35px;
-  float: left; }
-
-#securityC span {
-  display: none; }
-
-#security_iconsC {
-  float: left;
-  /* to take it out of the flow */
-  margin-top: 17px;
-  /* to place it below the form box */ }
-
-.submitC {
-  padding-top: 12px; }
-
-.submitC #securityC {
-  display: inline-block;
-  font-size: .9em;
-  color: #666;
-  position: relative;
-  top: -22px;
-  left: 5px; }
-
-input.valid, textarea.valid {
-  background-color: #daefc0;
-  border-color: #588238;
-  position: relative;
-  color: #588238 !important; }
-
-input.invalid, textarea.invalid {
-  background-color: #f6b5b1;
-  border-color: #bc2b25;
-  position: relative;
-  color: #a00 !important; }
-
-div.form_validation_icon {
-  background: url(/images/sprites/application.png) repeat-x scroll -513px -305px transparent;
-  position: absolute;
-  right: -17px;
-  /* 15px wide with 8px padding (4right, 4left) + border and this about centers it. ugh */
-  top: 20%;
-  height: 15px;
-  width: 15px;
-  z-index: 9; }
-
-div.form_validation_icon.valid {
-  background-position: -376px -323px; }
-
-div.form_validation_icon.invalid {
-  background-position: -359px -323px; }
-
-/* FIXME -- jquery.ketchup should not even be creating their container! */
-.ketchup-error-container {
-  display: none; }
-
-/*
-#menuC { margin-bottom : 7px; }
-#mainC div#tab_arrow {
-    display : block;
-    left : 240px;
-    top  : -1px;
-}
-#mainC img#top {
-    background : url(/images/page_banners/trends.png) no-repeat scroll 0px 0px transparent;
-    height : 108px;
-}
-hr#top_of_content.space { margin-top : -15px; }
-
-*/
-#menuC {
-  margin-bottom: 12px; }
-
-#mainC div#tab_arrow {
-  display: block;
-  left: 815px;
-  top: -6px; }
-
-#mainC img#top {
-  background: url(/images/page_banners/guides.png) no-repeat scroll 0px 0px transparent;
-  height: 110px; }
-
-hr#top_of_content.space {
-  margin-top: -15px; }
-
-/* guide single view */
-.guideC .guide_contentC {
-  margin-left: 3px; }
-
-h1 a {
-  color: inherit; }
-
-.guide_contentC p.teaser {
-  min-height: 59px; }
-
-/*-------------------*/
-.read_full_article {
-  background: url(/images/sprites/guides.png) no-repeat scroll 0px 0px transparent;
-  height: 33px;
-  width: 110px;
-  margin: 10px 0 0 0; }
-
-#books {
-  float: left;
-  background: url(/images/sprites/guides.png) no-repeat scroll -112px 0px transparent;
-  height: 45px;
-  width: 39px;
-  margin: 0 10px 0 0; }
-
-div#left_col hr.space {
-  margin: 0 0 50px 0; }
-
-/*---------- guide show ---------*/
-div#guide_showC .guide_contentC {
-  margin-right: 15px; }
-
-div#guide_showC img#main_image {
-  float: left;
-  padding: 0 15px 10px 0; }
-
-div.article_body {
-  padding-left: 15px; }
-
-div.article_body p {
-  padding-bottom: 1em; }
-
-.box div.gutter {
-  padding: 17px 0 12px 15px; }
-
-div#other_guidesC {
-  margin: 0 15px; }
-
-div#other_guidesC .titleC {
-  min-height: 45px;
-  margin-bottom: 5px; }
-
-div#other_guidesC h3.orange {
-  line-height: 39px; }
-
-div#other_guidesC ul {
-  margin-left: 15px; }
-
-div#other_guidesC li {
-  float: left;
-  list-style: disc outside none;
-  color: #53aa47;
-  font-size: .8em;
-  width: 30%;
-  margin-right: 3%;
-  margin-bottom: 5px; }
-
-div#other_guidesC li a {
-  color: #7A7A7A; }
+.slider{width:630px;position:relative;border:1px solid #D4E3A9;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}.slider_bg{background:url(/images/sprites/slider.png) repeat-x scroll 0px 0px transparent;width:621px;height:55px;position:absolute;top:130px;left:5px}.scroll{overflow:hidden;width:600px;height:185px;margin:0 auto;position:relative}.scrollContainer{position:relative}.scrollContainer div.panel{padding:16px 9px 0px 10px;width:169px;height:200px}.inside{position:absolute;bottom:0}.inside img{display:block;width:169px}.slider h2{font-size:1em;color:#888;padding:14px 0 10px 0;text-align:center;letter-spacing:.2px;word-spacing:.2px}.slider h2 a{font-weight:bold;color:#888}.inside p{font-size:11px;color:#ccc}.scroll_actionsC{height:20px;width:600px;margin:0 auto;margin-bottom:15px;position:relative;overflow:hidden}.scroll_actionsC .scroll_left{background:url(/images/sprites/slider.png) no-repeat scroll 0px -56px transparent;height:20px;width:28px;position:absolute;top:0;left:0}.scroll_actionsC .scrollbarC{background:url(/images/sprites/slider.png) no-repeat scroll -34px -56px transparent;width:553px;height:20px;position:absolute;top:0;left:28px}.scrollbarC .scrollbar{width:150px;height:8px;background:#d5e6a9;position:absolute;top:6px;left:6px}.scroll_actionsC .scroll_right{background:url(/images/sprites/slider.png) no-repeat scroll -590px -56px transparent;height:20px;width:29px;position:absolute;top:0;right:0}div.pagination{text-align:center;line-height:34px}div.pagination em,div.pagination a{padding:0 4px;margin:0 5px}div.pagination a{color:#888}div.pagination a:hover{color:#000;text-decoration:none !important}div.pagination em{background-color:#87a84a;color:#fff;border-radius:5px;-moz-border-radius:5px;-webkit-border-radius:5px}div.pagination a.previous_page,div.pagination a.previous_page:hover,div.pagination span.previous_page.disabled,div.pagination a.next_page,div.pagination a.next_page:hover,div.pagination span.next_page.disabled{background:url(/images/sprites/pagination.png) no-repeat scroll 0px 0px transparent;width:77px;height:34px;display:inline-block;margin:0 10px;padding:0}div.pagination a.previous_page:hover{background-position:0px    0px}div.pagination a.previous_page{background-position:0px -35px}div.pagination span.previous_page.disabled{background-position:0px -70px}div.pagination a.next_page:hover{background-position:-78px 0px}div.pagination a.next_page{background-position:-78px -35px}div.pagination span.next_page.disabled{background-position:-78px -70px}.sprite{background:url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px 500px transparent}#lock_icon{background-position:-359px -56px;height:25px;width:85px;vertical-align:text-top;margin-left:5px}#truste{background-position:0px -125px;height:28px;width:101px;margin:0 0 0 20px}#mcafee{background-position:-360px -32px;height:22px;width:62px;margin:0 0 0 4px}form input[type="image"]{background-position:0px -81px;height:40px;width:119px}.seller_signup_boxC{margin-bottom:50px}.seller_signup_boxC div.gutter{padding:15px 22px 5px}.seller_signup_boxC p,.seller_signup_boxC strong{font-size:.75em;line-height:16px;margin-bottom:8px;margin-right:-25px}.seller_signup_boxC strong{display:block;font-weight:bold;margin-bottom:4px}form .field,form input[type="text"]{width:208px}form label{display:none}form div#email.field,form input#seller_listing_user_email,form div#number.field,form input#seller_listing_phone_number_number,form div#address1.field,form input#seller_listing_address_address1{width:208px}form div#address_zip.field,form input#seller_listing_address_zip{width:151px}form div#city.field,form input#seller_listing_address_city{width:151px;float:left;margin-right:20px}form div#state.field,form input#seller_listing_address_state{width:35px;float:left}#securityC span{display:none}#security_iconsC{float:left;margin-top:17px}.submitC{padding-top:12px}.submitC #securityC{display:inline-block;font-size:.9em;color:#666;position:relative;top:-22px;left:5px}input.valid,textarea.valid{background-color:#daefc0;border-color:#588238;position:relative;color:#588238 !important}input.invalid,textarea.invalid{background-color:#f6b5b1;border-color:#bc2b25;position:relative;color:#a00 !important}div.form_validation_icon{background:url(/images/sprites/application.png) repeat-x scroll -513px -305px transparent;position:absolute;right:-17px;top:20%;height:15px;width:15px;z-index:9}div.form_validation_icon.valid{background-position:-376px -323px}div.form_validation_icon.invalid{background-position:-359px -323px}.ketchup-error-container{display:none}#menuC{margin-bottom:12px}#mainC div#tab_arrow{display:block;left:815px;top:-6px}#mainC img#top{background:url(/images/page_banners/guides.png) no-repeat scroll 0px 0px transparent;height:110px}hr#top_of_content.space{margin-top:-22px}.guideC .guide_contentC{margin-left:3px}h1 a{color:inherit}.guide_contentC p.teaser{min-height:59px}.read_full_article{background:url(/images/sprites/guides.png) no-repeat scroll 0px 0px transparent;height:33px;width:110px;margin:10px 0 0 0}#books{float:left;background:url(/images/sprites/guides.png) no-repeat scroll -112px 0px transparent;height:45px;width:39px;margin:0 10px 0 0}div#left_col hr.space{margin:0 0 50px 0}div#guide_showC img#main_image{float:left;padding:0 15px 10px 0}div.article_body{padding-left:15px}div.article_body p{padding-bottom:1em}div#other_guidesC{margin:0 15px}div#other_guidesC .titleC{min-height:45px;margin-bottom:5px}div#other_guidesC h3.orange{line-height:39px}div#other_guidesC ul{margin-left:15px}div#other_guidesC li{float:left;list-style:disc outside none;color:#53aa47;font-size:.8em;width:30%;margin-right:3%;margin-bottom:5px}div#other_guidesC li a{color:#7A7A7A}
