--- a/public/stylesheets/sass/_jquery.slider.scss
+++ b/public/stylesheets/sass/_jquery.slider.scss
@@ -1,7 +1,7 @@
 .slider {
     width : 630px;
     position: relative;
-    border : 1px solid #e8edca;
+    border : 1px solid #D4E3A9;
     border-radius : 5px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
