--- a/public/stylesheets/sass/_share_this_image.scss
+++ b/public/stylesheets/sass/_share_this_image.scss
@@ -5,3 +5,7 @@ textarea.copy_image_code {
     margin-bottom : 3px;
     overflow : hidden;
 }
+.box div.footnote {
+    font-size : .7em;
+    margin-bottom : 3px;
+}
