--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -34,6 +34,14 @@
     = javascript_include_tag :defaults
     = yield(:extra_js) if content_for?(:extra_js)
 
+    :plain
+      <!--[if IE 8]>
+        <style type="text/css">
+          html { font-size : 85%\0/; } /* IE 8 font sie hack */
+        </style>
+      <![endif]-->
+
+
     = csrf_meta_tag
 
     :javascript
