--- a/public/stylesheets/sass/_breadcrumb.scss
+++ b/public/stylesheets/sass/_breadcrumb.scss
@@ -1,6 +1,6 @@
 ul.breadcrumbC {
     font-size : .75em;
-    margin : 0;
+    margin : 0 0 1em 0;
     padding : 0;
     color : #53aa47;
     height : 2em;
