--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -40,6 +40,9 @@
           html { font-size : 85%\0/; } /* IE 8 font sie hack */
         </style>
       <![endif]-->
+      <!--[if IE 7]>
+        <link href="/stylesheets/ie7-sucks.css" media="screen" rel="stylesheet" type="text/css" />
+      <![endif]-->
 
 
     = csrf_meta_tag
