--- a/app/views/shared/_seller_signup.haml
+++ b/app/views/shared/_seller_signup.haml
@@ -8,4 +8,5 @@
     %strong
       Sell Your House Today!
 
-    = render :partial => 'seller_listings/form'
+    %span.shared_seller_signup
+      = render :partial => 'seller_listings/form'
