--- a/public/stylesheets/sass/new_seller_listing.scss
+++ b/public/stylesheets/sass/new_seller_listing.scss
@@ -100,6 +100,8 @@ form#new_seller_listing div#last_name.field {
 }
 .submitC #securityC {
     display : inline-block;
+    zoom : 1;
+    *display : inline;
     font-size : .9em;
     color : #666;
     position : relative;
