--- a/public/stylesheets/sass/pagination.scss
+++ b/public/stylesheets/sass/pagination.scss
@@ -27,6 +27,8 @@ div.pagination span.next_page.disabled {
     width : 77px;
     height : 34px;
     display : inline-block;
+    zoom : 1;
+    *display : inline;
     margin : 0 10px;
     padding : 0;
 }
