--- a/app/views/shared/blogs/_share_article_on.haml
+++ b/app/views/shared/blogs/_share_article_on.haml
@@ -1,6 +1,6 @@
 %div.share_article_onC
   %strong share article on:
   %div.shareC
-    = image_tag '/images/transparent.gif', :id => 'r_facebook_icon', :class => 'reasons_sprite', :alt => 'Facebook'
-    = image_tag '/images/transparent.gif', :id => 'r_twitter_icon', :class => 'reasons_sprite', :alt => 'Twitter'
-    = image_tag '/images/transparent.gif', :id => 'r_envelope_icon', :class => 'reasons_sprite', :alt => ''    
+    - object.social_profiles.each do |social_profile|
+      - img = image_tag '/images/transparent.gif', :id => "#{social_profile.website}S", :alt => social_profile.website.capitalize
+      = link_to img, social_profile.url
